--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
 .main-bg {
   height: 300px;
-  /* background-image: url(./img/bg.png); */
+  background-image: url(./img/bg.png);
   background-size: cover;
   background-position: center;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  background-color: antiquewhite;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
