--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,11 @@
   display: flex;
   justify-content: space-between;
 }
+
+.start {
+  opacity : 0
+}
+.end {
+  opacity : 1;
+  transition : opacity 0.5s;
+}
