--- a/src/App.css
+++ b/src/App.css
@@ -9,25 +9,29 @@
 }
 
 :root {
-  background-color: black;
+  /* background-color: black; */
+  /* z-index: -1001; */
 }
 
-*{
+.main-bg {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  width: 100%;
+  height: 50%;
+  z-index: -1000;
+  background: url(/public/orange-rebg.png) no-repeat center;
+  background-size: cover;
+}
+
+* {
   color: #fff;
 }
-
 
 .App {
   height: 100%;
   position: relative;
-}
-
-
-.main-bg {
-  height: 300px;
-  background-image: url(./img/bg.png);
-  background-size: cover;
-  background-position: center;
+  z-index: -1000;
 }
 
 .inner {
@@ -35,7 +39,6 @@
   margin: 0px auto;
   border: 1px solid orange;
 }
-
 
 .footer {
   position: absolute;
@@ -50,12 +53,16 @@
   color: #fff;
 }
 
+.home-page {
+  height: 100vh;
+}
+
 .start {
-  opacity : 0
+  opacity: 0;
 }
 .end {
-  opacity : 1;
-  transition : opacity 0.5s;
+  opacity: 1;
+  transition: opacity 0.5s;
 }
 
 /* 최근본 상품 */
@@ -72,7 +79,6 @@
   padding-top: 20px;
 }
 
-
 .home-page p {
   font-size: 20px;
 }
@@ -87,7 +93,7 @@
   padding: 12px 0;
   padding-left: 8px;
   width: 100%;
-  background-color: #F3F2FF;
+  background-color: #f3f2ff;
   border-radius: 8px;
   color: #000;
   font-size: 20px;
@@ -98,7 +104,7 @@
 .loading-bg {
   height: 100vh;
   width: 100vw;
-  background-color: #7B6BF8;
+  background-color: #7b6bf8;
   z-index: 9999;
   position: relative;
 }
@@ -107,11 +113,12 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   text-align: center;
 }
 
-.loading-txt p, .loading-txt h2 {
+.loading-txt p,
+.loading-txt h2 {
   color: #fff;
   white-space: nowrap;
 }
@@ -123,7 +130,7 @@
 
 /* 메인 */
 
-.main-category{
+.main-category {
   text-align: center;
   font-family: "ZenDots";
   position: relative;
@@ -133,12 +140,11 @@
 .title-group {
   position: absolute;
   left: 50%;
-  top: 200px;
-  transform: translateX(-50%);
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .main-title {
- 
   font-size: 140px;
 }
 
