--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,7 @@
   src: url(/public/font/ZenDots-Regular.ttf);
 }
 
-:root {
-  /* background-color: black; */
-  /* z-index: -1001; */
-}
+
 
 .main-bg {
   position: absolute;
@@ -32,25 +29,44 @@
   height: 100%;
   position: relative;
   z-index: -1000;
+  overflow: hidden;
 }
 
 .inner {
   width: 1280px;
   margin: 0px auto;
-  border: 1px solid orange;
+  /* border: 1px solid orange; */
 }
 
 .footer {
   position: absolute;
   bottom: 0;
+  margin-top: 40px;
+  /* padding: 10px 0; */
+  border: 1px solid yellow;
+  /* text-align: left; */
+}
+
+.foot-top {
+  border: 1px solid salmon;
+  display: flex;
+  width: 1280px;
+  justify-content: space-between;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  padding: 10px 0;
-  text-align: left;
+  z-index: 9999;
 }
 
 .footer .footer-a {
   text-decoration: none;
   color: #fff;
+  border: 1px dashed pink;
+  margin-right: 48px;
 }
 
 .home-page {
@@ -164,17 +180,71 @@
   color: transparent;
 }
 
+.scroll-info {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-top: 28px;
+  height: 40px;
+}
+
+.scroll-info::before {
+  content: '';
+  display: block;
+  width: 24px;
+  height: 24px;
+  background: url(/public/mouse-icon.svg) no-repeat center;
+  margin: 0px auto;
+  animation-name: updown ;
+  animation-iteration-count: infinite;
+  animation-duration: .5s; /* 애니메이션의 지속 시간 설정 */
+  animation-direction: alternate; /* 애니메이션이 양방향으로 반복 */
+  position: relative;
+  bottom: 8px;
+}
+
+@keyframes updown {
+  0% {bottom: 4px;}
+  100% {bottom: 8px;}
+}
+
+
+
 .col-wrap {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding-bottom: 80px;
 }
 
 .card-item {
   width: calc((100% / 3) - 20px);
+  height: auto;
   flex: 0 0 auto;
+  overflow: hidden;
 }
 
 .card-item img {
-  width: 100%;
+  width: 100%;  
+  height: 300px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.col-title {
+  font-family: "ZenDots";
+  margin-bottom: 20px;
+  font-size: 36px;
+  
+}
+
+.article-title {
+  margin-top: 24px;
+  font-weight: 800;
+  font-size: 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
 }
