--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,10 @@
   src: url(/public/font/ZenDots-Regular.ttf);
 }
 
-
+#root {
+  position: relative;
+  z-index: -9999;
+}
 
 .main-bg {
   position: absolute;
@@ -35,7 +38,7 @@
 .inner {
   width: 1280px;
   margin: 0px auto;
-  /* border: 1px solid orange; */
+
 }
 
 .footer {
@@ -43,12 +46,10 @@
   bottom: 0;
   margin-top: 40px;
   /* padding: 10px 0; */
-  border: 1px solid yellow;
   /* text-align: left; */
 }
 
 .foot-top {
-  border: 1px solid salmon;
   display: flex;
   width: 1280px;
   justify-content: space-between;
@@ -65,7 +66,6 @@
 .footer .footer-a {
   text-decoration: none;
   color: #fff;
-  border: 1px dashed pink;
   margin-right: 48px;
 }
 
@@ -85,7 +85,6 @@
 
 .recent-wrap {
   background-color: beige;
-  border: 1px solid blue;
   margin-top: 20px;
   width: 200px;
   text-align: center;
@@ -247,4 +246,12 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 
+}
+
+.foot-bottom {
+  padding-bottom: 20px;
+}
+
+.select-box {
+  color: #000;
 }
