--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,11 @@
   src: url(/public/font/ZenDots-Regular.ttf);
 }
 
-#root {
+body {
+  height: 100%;
   position: relative;
-  z-index: -9999;
 }
+
 
 .main-bg {
   position: absolute;
@@ -19,7 +20,7 @@
   top: 0px;
   width: 100%;
   height: 50%;
-  z-index: -1000;
+  /* z-index: -1000; */
   background: url(/public/orange-rebg.png) no-repeat center;
   background-size: cover;
 }
@@ -29,10 +30,8 @@
 }
 
 .App {
-  height: 100%;
-  position: relative;
   z-index: -1000;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .inner {
@@ -214,7 +213,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding-bottom: 80px;
+  padding-bottom: 160px;
 }
 
 .card-item {
@@ -222,6 +221,10 @@
   height: auto;
   flex: 0 0 auto;
   overflow: hidden;
+}
+
+.article-content {
+  height: 48px;
 }
 
 .card-item img {
@@ -249,9 +252,56 @@
 }
 
 .foot-bottom {
+  padding-top: 12px;
   padding-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
+.select-box, .select-box option {
+  color: #000
 }
 
 .select-box {
-  color: #000;
+  width: 200px;
+  padding: 8px 0;
+  background: transparent;
+  border-radius: 4px;
+  border: 2px solid #fff;
+  color: #fff;
+}
+
+.article-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.author-info {
+  color: gray;
+}
+
+.heartIcon {
+  /* display: inline-block;
+  width: 32px;
+  height: 32px;
+  background: url(/public/ph_heart-bold.svg) no-repeat center;
+  background-size: contain; */
+  /* padding-right: 40px; */
+  display: inline-flex;
+  align-items: center;
+  text-decoration: none;
+  color: #fff;
+}
+
+.heartIcon::after {
+  content: '';
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+  background: url(/public/ph_heart-bold.svg) no-repeat center;
+  background-size: contain;
+  margin-left: 12px;
 }
