--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,13 @@
   font-family: "ZenDots";
   src: url(/public/font/ZenDots-Regular.ttf);
 }
-
+html { height:100%; }
 body {
   height: 100%;
-  position: relative;
+  position: relative; 
+  z-index: -10000;
 }
+
 
 
 .main-bg {
@@ -31,7 +33,7 @@ body {
 
 .App {
   z-index: -1000;
-  /* overflow: hidden; */
+
 }
 
 .inner {
@@ -41,8 +43,6 @@ body {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
   margin-top: 40px;
   /* padding: 10px 0; */
   /* text-align: left; */
@@ -130,6 +130,16 @@ body {
   transform: translate(-50%, -50%);
   text-align: center;
 }
+
+#table-bg {
+  background-color: transparent;
+}
+
+table {
+  margin-top: 40px;
+}
+
+.table_custom {--bs-table-bg : transparent!important; --bs-table-color : #fff!important}
 
 .loading-txt p,
 .loading-txt h2 {
@@ -221,6 +231,7 @@ body {
   height: auto;
   flex: 0 0 auto;
   overflow: hidden;
+  padding-bottom: 60px;
 }
 
 .article-content {
@@ -270,6 +281,8 @@ body {
   background: transparent;
   border-radius: 4px;
   border: 2px solid #fff;
+
+  
   color: #fff;
 }
 
