--- a/src/App.css
+++ b/src/App.css
@@ -45,8 +45,50 @@ input {
 }
 
 .comment {
-  border: 1px solid black;
-  margin-top: 40px;
+  /* background-color: lightgray ; */
+  padding: 8px 12px ;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.comment-wrap {
+  padding-bottom: 20px;
+}
+
+.comment-check {
+  margin-left: 12px;
+  border-radius: 4px;
+  border: 0;
+  padding: 12px 16px;
+  width: 10%;
+  font-weight: 700;
+}
+
+.comment-box {
+  width: 100%;
+}
+
+.comment-box input {
+  width: 85%;
+  padding: 12px 0;
+  border-radius: 8px;
+  padding-left: 8px;
+}
+
+
+
+.user-image {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: aliceblue;
+}
+
+
+.template-wrap {
+  padding-top: 40px;
 }
 
 .App {
@@ -101,6 +143,7 @@ input {
 .recent-wrap {
   position: fixed;
   right: 20px;
+  bottom: 20px;
   margin-top: 20px;
   width: 200px;
   text-align: center;
