--- a/src/App.css
+++ b/src/App.css
@@ -40,13 +40,22 @@ body {
   color: #fff;
 }
 
+::-webkit-scrollbar-thumb  {
+  background-color: lightblue;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 input {
   color: #000;
 }
 
 .comment {
   /* background-color: lightgray ; */
-  padding: 8px 12px ;
+  /* padding: 8px 12px ; */
+  padding: 4px 0;
   border-radius: 8px;
   margin-bottom: 20px;
   display: flex;
@@ -58,20 +67,23 @@ input {
 }
 
 .comment-check {
-  margin-left: 12px;
+  padding-left: 12px;
   border-radius: 4px;
   border: 0;
-  padding: 12px 16px;
+  padding: 12px 0;
   width: 10%;
   font-weight: 700;
 }
 
 .comment-box {
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: #fff;
 }
 
 .comment-box input {
-  width: 85%;
+  width: calc(90% - 12px);
   padding: 12px 0;
   border-radius: 8px;
   padding-left: 8px;
@@ -83,7 +95,7 @@ input {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: aliceblue;
+  background: url(/public/user-profile.svg) no-repeat center;
 }
 
 
@@ -147,10 +159,12 @@ input {
   margin-top: 20px;
   width: 200px;
   text-align: center;
-  border: 1px solid #fff;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #303030;
+  /* box-shadow: 20px 20px 60px #292929, -20px -20px 60px #373737; */
   padding: 20px 0;
+  border-radius: 32px;
   z-index: 999;
+  
 }
 
 .row {
@@ -319,24 +333,29 @@ table {
 
 .book , .heartDetail {
   font-size: 20px;
+  line-height: 28px;
   font-weight: 700;
 }
 
 .book::after {
   content: '';
   display: inline-block;
-  width: 20px;
-  height: 20px;
-  background-color: aqua;
+  width: 28px;
+  height: 28px;
+  background: url(/public/book-mark-out.svg)no-repeat center;
   margin-left: 8px;
+  background-size: contain;
+
 }
 
 .heartDetail::after{
   content: '';
   display: inline-block;
-  width: 20px;
-  height: 20px;
-  background-color: aqua;
+  width: 28px;
+  height: 28px;
+  background: url(/public/ph_heart-bold.svg)no-repeat center;
+  background-size: contain;
+
   margin-left: 8px;
 }
 
