그래도 완성 가능할듯..

--- a/src/App.css
+++ b/src/App.css
@@ -310,7 +310,7 @@ table {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding-bottom: 160px;
+  /* padding-bottom: 160px; */
 }
 
 .card-item {
